# new_poetry_project

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/assets/: README.md
docs/css/: style.css
new_poetry_project/: __init__.py
