[tool.poetry]
name = "new-poetry-project"
version = "0.1.0"
description = ""
authors = ["arbdigital-art <arb.digitalart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.43"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-mudules"